_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gray-release-canary
  namespace: default
  annotations: # 文档: https://help.aliyun.com/document_detail/200941.html
    # 开启Canary。
    nginx.ingress.kubernetes.io/canary: "true"
    # Http Header请求头为foo。
    nginx.ingress.kubernetes.io/canary-by-header: "foo"
    # 请求头foo=bar时，请求才会被路由到新版本服务中。
    nginx.ingress.kubernetes.io/canary-by-header-value: "bar"
    # 在满足上述匹配规则的基础上仅允许百分比的流量会被路由到新版本服务中。
    nginx.ingress.kubernetes.io/canary-weight: "100"
    # 开启跨域
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # 数据传输大小
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    # 数据请求超时时间
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # 负载均衡算法 如ip_hash
    nginx.ingress.kubernetes.io/upstream-hash-by: "$host"


spec:
  rules:
    - host: new-version.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: {APP_NAME}-service
                port:
                  number: {HOST_PORT}
            pathType: ImplementationSpecific
#    - host: old-version.com
#      http:
#        paths:
#          - path: /
#            backend:
#              service:
#                name: oldServiceName
#                port:
#                  number: 80
#            pathType: ImplementationSpecific
